# vol-ctl

./: .pre-commit-config.yaml  README.md  pyproject.toml  vol-ctl-wrapper.sh  vol-osd.service
src/vol_ctl/: __init__.py  cli.py  models.py  stream.py
src/vol_osd/: __init__.py  audio.py  ctl.py  daemon.py  utils.py
vol_osd/: __init__.py  audio.py  ctl.py  daemon.py  style.css  utils.py
