[project]
name = "vol-ctl"
version = "0.1.0"
description = "Per-app volume OSD for Wayland/niri with PipeWire"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["PyGObject"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vol_osd"]

[project.scripts]
vol-osd = "vol_osd.daemon:main"
vol-ctl = "vol_osd.ctl:main"
