[project]
name = "vol-ctl"
version = "0.1.5"
description = "Per-app volume OSD for Wayland/niri with PipeWire"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["PyGObject", "dbus-python"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vol_osd"]

[project.scripts]
vol-osd = "vol_osd.daemon:main"
vol-ctl = "vol_osd.ctl:main"

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[[tool.ty.overrides]]
include = ["vol_osd/*.py"]

[tool.ty.overrides.analysis]
allowed-unresolved-imports = ["gi.repository.*", "dbus"]
