[project]
name = "vol-ctl"
version = "0.2.2"
description = "Per-app volume OSD for Wayland/niri with PipeWire"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["dbus-python"]

[project.optional-dependencies]
osd = ["PyGObject"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vol_osd", "src/vol_ctl"]

[project.scripts]
vol-osd = "vol_osd.daemon:main"
vol-ctl = "vol_ctl.cli:main"

[tool.ruff.lint]
ignore = [
  "E402", # module-import-not-at-top-of-file
]
extend-select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting (isort)
  "UP", # pyupgrade (modern Python)
  "B",  # bugbear (common bugs)
]

[tool.ruff.lint.flake8-type-checking]
strict = true

[[tool.ty.overrides]]
include = ["src/vol_osd/*.py", "src/vol_ctl/*.py"]

[tool.ty.overrides.analysis]
allowed-unresolved-imports = ["gi.**", "dbus"]
